--- a/index.html
+++ b/index.html
@@ -57,12 +57,15 @@
                   href="#portafolio"
                   >PORTAFOLIO</a
                 >
+                <div class="estilo-menu"></div>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#sobre-mi">SOBRE MÍ</a>
+                <div class="estilo-menu"></div>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#contacto">CONTACTO</a>
+                <div class="estilo-menu"></div>
               </li>
             </ul>
           </div>
@@ -424,7 +427,6 @@
                   <i class="fa-solid fa-star-half-stroke"></i>
                   <p class="linea m-0"></p>
                 </div>
-
                 <img
                   style="width: 300px"
                   src="./img/petshop.jpeg"
