--- a/index.html
+++ b/index.html
@@ -658,21 +658,34 @@
               <p class="m-0">Calle: L.Maldonado N°103</p>
               <p class="m-0">Barrio: Congreso</p>
             </div>
-            <div class="col-12 col-md-6 col-lg-4 my-4">
+            <nav class="col-12 col-md-6 col-lg-4 my-4">
               <h3 class="mb-3 fs-4 fw-bold">SIGAMOS CONECTADOS</h3>
-              <a class="text-decoration-none icons mx-3 fs-4" href="#pie"
+
+              <a
+                class="text-decoration-none icons mx-3 fs-4"
+                id="a1"
+                href="#pie"
                 ><i class="fa-brands fa-square-facebook"></i>
               </a>
-              <a class="text-decoration-none icons mx-3 fs-4" href="#pie"
+              <a
+                class="text-decoration-none icons mx-3 fs-4"
+                id="a2"
+                href="#pie"
                 ><i class="fa-brands fa-square-instagram"></i
               ></a>
-              <a class="text-decoration-none icons mx-3 fs-4" href="#pie"
+              <a
+                class="text-decoration-none icons mx-3 fs-4"
+                id="a3"
+                href="#pie"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
-              <a class="text-decoration-none icons mx-3 fs-4" href="#pie"
+              <a
+                class="text-decoration-none icons mx-3 fs-4"
+                id="a4"
+                href="https://github.com/Brian-Tech-prog"
                 ><i class="fa-brands fa-square-github"></i
               ></a>
-            </div>
+            </nav>
             <div class="col-12 col-md-6 col-lg-4 my-4">
               <h3 class="mb-3 fs-4 fw-bold">SOBRE MÍ</h3>
               <p>
