--- a/index.html
+++ b/index.html
@@ -664,24 +664,28 @@
                 class="text-decoration-none icons mx-3 fs-4"
                 id="a1"
                 href="#pie"
+                target="_blank"
                 ><i class="fa-brands fa-square-facebook"></i>
               </a>
               <a
                 class="text-decoration-none icons mx-3 fs-4"
                 id="a2"
                 href="#pie"
+                target="_blank"
                 ><i class="fa-brands fa-square-instagram"></i
               ></a>
               <a
                 class="text-decoration-none icons mx-3 fs-4"
                 id="a3"
                 href="#pie"
+                target="_blank"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
               <a
                 class="text-decoration-none icons mx-3 fs-4"
                 id="a4"
                 href="https://github.com/Brian-Tech-prog"
+                target="_blank"
                 ><i class="fa-brands fa-square-github"></i
               ></a>
             </nav>
